@@ -18,8 +18,6 @@ This file has examples of bad data for the School Years sheet:
     <p class="error">School Years D3 end date cannot be before start date</p>
     <p class="error">School Years C5 start date overlaps another year</p>
     <p class="error">School Years D6 end date overlaps another year</p>
-    <p class="error">School Years A7 not unicode or ascii string</p>
-    <p class="error">School Years B7 not unicode or ascii string</p>
 
 This file has examples of bad data for the Terms sheet:
 
@@ -36,7 +34,7 @@ This file has examples of bad data for the Terms sheet:
     <p class="error">Terms C2 missing required text</p>
     <p class="error">Terms D2 has no date in it</p>
     <p class="error">Terms E2 has no date in it</p>
-    <p class="error">Terms A3 not unicode or ascii string</p>
+    <p class="error">Terms A3 invalid school year</p>
     <p class="error">Terms A4 invalid school year</p>
     <p class="error">Terms E5 end date cannot be before start date</p>
     <p class="error">Terms D6 start date before start of school year</p>
@@ -63,10 +61,6 @@ This file has examples of bad data for the School Timetables sheet:
     <p class="error">School Timetables B3 missing required text</p>
     <p class="error">School Timetables B4 missing required text</p>
     <p class="error">School Timetables B5 missing required text</p>
-    <p class="error">School Timetables B6 not unicode or ascii string</p>
-    <p class="error">School Timetables B7 not unicode or ascii string</p>
-    <p class="error">School Timetables B8 not unicode or ascii string</p>
-    <p class="error">School Timetables B9 not unicode or ascii string</p>
     <p class="error">School Timetables B10 missing required text</p>
     <p class="error">School Timetables B15 missing required text</p>
     <p class="error">School Timetables B20 missing required text</p>
@@ -126,29 +120,15 @@ This file has examples of bad data for the Persons sheet:
     ...     'sample_data.xls')
     >>> browser.getControl('Submit').click()
     >>> browser.printQuery("//p[@class='error']")
-    <p class="error">Persons B2 not unicode or ascii string</p>
     <p class="error">Persons C2 missing required text</p>
-    <p class="error">Persons D2 not unicode or ascii string</p>
     <p class="error">Persons E2 missing required text</p>
-    <p class="error">Persons F2 not unicode or ascii string</p>
-    <p class="error">Persons G2 not unicode or ascii string</p>
     <p class="error">Persons H2 has no date in it</p>
-    <p class="error">Persons I2 not unicode or ascii string</p>
-    <p class="error">Persons J2 not unicode or ascii string</p>
-    <p class="error">Persons K2 not unicode or ascii string</p>
-    <p class="error">Persons L2 not unicode or ascii string</p>
-    <p class="error">Persons M2 not unicode or ascii string</p>
-    <p class="error">Persons N2 not unicode or ascii string</p>
-    <p class="error">Persons O2 not unicode or ascii string</p>
     <p class="error">Persons P2 missing required text</p>
     <p class="error">Persons Q2 has no date in it</p>
     <p class="error">Persons R2 missing required text</p>
-    <p class="error">Persons C3 not unicode or ascii string</p>
-    <p class="error">Persons E3 not unicode or ascii string</p>
     <p class="error">Persons Q3 has no date in it</p>
     <p class="error">Persons R3 must be either True or False</p>
     <p class="error">Persons A4 Username cannot contain non-ascii characters: gr...ta</p>
-    <p class="error">Persons A5 not unicode or ascii string</p>
 
 We'll remove the demo fields to not break future tests.
 
@@ -170,10 +150,6 @@ This file has examples of bad data for the Courses sheet:
     >>> browser.printQuery("//p[@class='error']")
     <p class="error">Courses B2 missing required text</p>
     <p class="error">Courses C2 missing required text</p>
-    <p class="error">Courses A3 not unicode or ascii string</p>
-    <p class="error">Courses B3 not unicode or ascii string</p>
-    <p class="error">Courses C3 not unicode or ascii string</p>
-    <p class="error">Courses D3 not unicode or ascii string</p>
     <p class="error">Courses A4 invalid school year</p>
 
 This file has examples of bad data for the Sections sheet:
@@ -190,13 +166,9 @@ This file has examples of bad data for the Sections sheet:
     <p class="error">School Timetables B5 missing required text</p>
     <p class="error">Sections 1 B1 missing required text</p>
     <p class="error">Sections 1 D1 missing required text</p>
-    <p class="error">Sections_2 B1 not unicode or ascii string</p>
-    <p class="error">Sections_2 D1 not unicode or ascii string</p>
     <p class="error">Sections_3 B1 invalid school year</p>
     <p class="error">Sections_4 D1 is not a valid term in the given school year</p>
-    <p class="error">Sections_5 A11 not unicode or ascii string</p>
     <p class="error">Sections_5 A12 is not a valid username</p>
-    <p class="error">Sections_5 A16 not unicode or ascii string</p>
     <p class="error">Sections_5 A17 is not a valid username</p>
     <p class="error">Sections_5 A20 is not a valid timetable in the given school year</p>
 
@@ -214,12 +186,7 @@ This file has examples of bad data for the Groups sheet:
     <p class="error">Groups B1 missing required text</p>
     <p class="error">Groups B2 missing required text</p>
     <p class="error">Groups B3 missing required text</p>
-    <p class="error">Groups B6 not unicode or ascii string</p>
-    <p class="error">Groups B7 not unicode or ascii string</p>
-    <p class="error">Groups B8 not unicode or ascii string</p>
-    <p class="error">Groups B9 not unicode or ascii string</p>
     <p class="error">Groups A11 invalid school year</p>
-    <p class="error">Groups A22 not unicode or ascii string</p>
     <p class="error">Groups A23 is not a valid username</p>
 
 This file has examples of bad data for the Contact Persons and Contact
